--- a/package.json
+++ b/package.json
@@ -15,5 +15,9 @@
   "bugs": {
     "url": "https://github.com/hou27/Nodejs0426/issues"
   },
-  "homepage": "https://github.com/hou27/Nodejs0426#readme"
+  "homepage": "https://github.com/hou27/Nodejs0426#readme",
+  "dependencies": {
+    "body-parser": "^1.19.0",
+    "express": "^4.17.1"
+  }
 }
