--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Nodejs practice",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node app.js"
   },
   "repository": {
     "type": "git",
@@ -18,6 +19,10 @@
   "homepage": "https://github.com/hou27/Nodejs0426#readme",
   "dependencies": {
     "body-parser": "^1.19.0",
-    "express": "^4.17.1"
+    "ejs": "^3.1.6",
+    "express": "^4.17.1",
+    "html-entities": "^2.3.2",
+    "mongodb": "^3.6.6",
+    "mongoose": "^5.12.8"
   }
 }
