--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "html-entities": "^2.3.2",
     "mongodb": "^3.6.6",
     "mongoose": "^5.12.8",
+    "multer": "^1.4.2",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
     "session-file-store": "^1.5.0"
