--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "multer": "^1.4.2",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
-    "session-file-store": "^1.5.0"
+    "session-file-store": "^1.5.0",
+    "socket.io": "^4.1.2"
   }
 }
