--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
     "session-file-store": "^1.5.0",
-    "socket.io": "^4.1.2"
+    "socket.io": "^4.1.2",
+    "yarn": "^1.22.10"
   }
 }
